# nixfiles-v2

./: .cursorrules  .gitignore  .luarc.json  .sops.yaml  AGENTS.md  README.md  flake.nix
.cursor/rules/: nix.mdc  secrets.mdc
apps/aarch64-darwin/: build  switch
apps/aarch64-linux/: build
apps/x86_64-linux/: build  switch
config/aerospace/: raycast-ai.sh
config/ghostty/: config.toml
config/gitmux/: gitmux.conf
config/nvim/: .luarc.json  lazy-lock.json  lazyvim.json
config/nvim.bak/: lazy-lock.json  lazyvim.json
config/nvim/.config/nvim/tests/python_test/: pyproject.toml
config/nvim/.config/nvim/tests/python_test/python_test/: greeter.py
config/nvim/.config/nvim/tests/python_test/tests/: __init__.py
config/opencode/: opencode.json
config/sesh/: sesh.toml
config/starship/: rose-pine.toml
config/treekanga/: treekanga.yml
config/zsh/: .p10k.zsh  starship_init.zsh
docs/: ARCHITECTURE.md
docs/agents/: README.md  todo.md
hosts/darwin/: default.nix  home.nix
hosts/nixos/: default.nix  hardware-configuration.nix  home.nix
lib/: app.nix  darwin.nix  default.nix  homemanager.nix  nixos.nix
modules/: homemanager.nix
modules/archived/: default.nix
modules/darwin/: README.md  brews.nix  casks.nix  default.nix  determinate.nix  dock.nix  homebrew.nix  linux-builder.nix  packages.nix
modules/home/: default.nix
modules/nixos/: README.md  default.nix  packages.nix
modules/shared/: README.md  default.nix  home-manager.nix.bak  homemanager.nix  (+3 more)
overlays/: kube-slice.nix  mise.nix.bak  pass-cli.nix
scripts/: aws_helpers.sh  test.sh
(+127 files in other folders)
